--- a/foundations/flex/06-flex-layout/solution/solution.css
+++ b/foundations/flex/06-flex-layout/solution/solution.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
 
 body {
   height: 100vh;
@@ -45,10 +45,10 @@ button {
   gap: 16px;
 }
 
-a {
+/* a {
   color: #666;
   text-decoration: none;
-}
+} */
 
 .header,
 .footer {
@@ -66,5 +66,5 @@ ul {
   list-style: none;
   margin: 0;
   padding: 0;
-  gap: 16px
+  gap: 16px;
 }
